--- a/_includes/rendernav.html
+++ b/_includes/rendernav.html
@@ -1,5 +1,5 @@
 
-<aside class="usa-layout-docs-sidenav desktop:grid-col-3 padding-bottom-4">
+<aside class="usa-layout-docs-sidenav desktop:grid-col-3 padding-bottom-4 no-print">
     <nav>
       <ul class="usa-sidenav">
 {% for i in page.pagenav %} <!-- site.data.navigation[include.nav] -->
