Cleanup, new additions.
This is a big commit. I should have broken it up.

First, there are containers that are the start of work for automation
with Github Actions.

Second, there's cleanup related to making sure all of the lessons have
some kind of small group or full group discussion. They do. Any that
don't are because the lesson before "spills over" into the next lesson.

A "this is not official" banner has been added. This involved an include
and an addition to a template.

Work began on "related pages in the guides." This involved a new
datafile for managing the links out to the guides.

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,7 +5,7 @@ The primary and secondary navigation are defined in _data/navigation.yaml
 <header class="usa-header usa-header--extended no-print">
   <div class="usa-navbar">
     <div class="usa-logo" id="extended-logo">
-      <em class="usa-logo__text"><a href="{{ site.baseurl }}" title="Home" aria-label="Home">{{ site.title }}</a></em>
+      <em class="usa-logo__text"><a href="{{ site.baseurl }}/" title="Home" aria-label="Home">{{ site.title }}</a></em>
     </div>
     <button class="usa-menu-btn">Menu</button>
   </div>
