--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,7 +10,8 @@ The home page uses wide.html layout, since it extends full width of page
 {% include meta.html %}
 
 <body>
-  {% include header.html %}
+  <!-- Removing header while prototyping. FIXME. -->
+  <!-- {% include header.html %} -->
 
   {% include menu.html primary_navigation=site.primary_navigation  secondary_navigation=site.secondary_navigation %}
 
