--- a/_layouts/lesson.html
+++ b/_layouts/lesson.html
@@ -8,11 +8,11 @@ layout: widepage
     {% include rubric dimension=dim %}
 {% endfor %}
 
-<h2>What's This About?</h2>
+<h2>What's this about?</h2>
 
 <p>{{ page.overview }}</p>
 
-<h2>Lesson Outline</h2> 
+<h2>Lesson outline</h2> 
 
 {% include toc.html html=content h_max=2 %}
 
