--- a/_includes/derisking.html
+++ b/_includes/derisking.html
@@ -1,5 +1,5 @@
 {% if page.federal or page.state %}
-<h3>In the Guides</h3>
+<h3>In the guides</h3>
 <p>
 This lesson is the beginning of a journey. If you're interested in learning more, there's material in the <a href="{{ site.data.fieldguide.root }}">18F Derisking Guide</a> that you'll want to check out.
 </p>
