smoothing and edits to derisking guide links to sentence case

--- a/_includes/shared-experience-prompt.html
+++ b/_includes/shared-experience-prompt.html
@@ -1,5 +1,5 @@
 
-## Sharing Experience (30m, small group)
+## Sharing experience (30m, small group)
 
 Meet with your small group and connect what you learned in this lesson to situations you've seen with your state projects. Consult the notes you took throughout the lesson and try to link them to a story that you can tell about a particular project. It's probably useful to do some brainstorming on this before you meet with your small group to trade stories. 
 
