trying to add indicator to lessons

--- a/_layouts/lesson.html
+++ b/_layouts/lesson.html
@@ -5,8 +5,11 @@ layout: widepage
 <h1> {{ page.title }} </h1>
 
 {% for dim in page.dimension %}
+    {% include indicator slug=lesson.id %}
     {% include rubric dimension=dim %}
 {% endfor %}
+
+
 
 <h2>What's this about?</h2>
 
