--- a/_layouts/lesson.html
+++ b/_layouts/lesson.html
@@ -5,7 +5,7 @@ layout: widepage
 <h1> {{ page.title }} </h1>
 
 {% for dim in page.dimension %}
-    {% include indicator slug=lesson.id %}
+    {% include indicator slug=dim %}
     {% include rubric dimension=dim %}
 {% endfor %}
 
