--- a/_layouts/lesson.html
+++ b/_layouts/lesson.html
@@ -14,7 +14,7 @@ layout: widepage
 <h1> {{ page.title }} </h1>
 
 {% for dim in page.dimension %}
-<span class="courseslug" style="background: {{ color }};">
+<span class="courseslug" style="background: #1d3557;">
     {% include indicator slug=dim %}
 </span>
     {% include rubric dimension=dim %}
