--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -5,10 +5,10 @@
     </div>
     <div class="tablet:grid-col-8 usa-prose">
       <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">
-        Med School for State Officers
+        Like med school for product owners
       </h2>
       <p>When you get down to it, doctors just want you to be healthy.</p>
-      <p>This course will help you develop tactics and strategies for getting your patients (states, vendors, and their projects) to come in for checkups more often, so you can help keep them healthy, on track, and delivering success.</p>
+      <p>This course will help you develop tactics and strategies for getting your patients (agencies, vendors, and their projects) to come in for checkups more often, so you can help keep them healthy, on track, and delivering success.</p>
     </div>
   </div>
 </section>
