Removing more references, interactivity
Removed airtable forms. Not for general use.

Removed more references to partner.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
       <div class="grid-row padding-3">
         <div class="tablet:grid-col">
           <div class="logo-links">
-            <a class="footer-logo media_link" href="https://www.cms.gov/">
-              <img src="{{ '/assets/images/cms-logo.png' | prepend: site.baseurl }}" width="50" alt="Agency logo" %}
+            <a class="footer-logo media_link" href="https://18f.gsa.gov/">
+              <img src="{{ '/assets/images/18f-logo.png' | prepend: site.baseurl }}" width="50" alt="Agency logo" %}
             </a>
           </div>
         </div>
@@ -15,7 +15,6 @@
           <ul class="add-list-reset">
             <li><a href="{{site.baseurl}}/">Home</a></li>
             <li><a href="{{site.baseurl}}/rubric/">Health Rubric</a></li>
-            <li><a href="https://airtable.com/shrsMy2dpZDPbWTXW">Health Tracker</a></li>
           </ul>
         </div>
         <div class="tablet:grid-col">
